--- a/Class1/Programming Structures and Python Tour 2017.ipynb
+++ b/Class1/Programming Structures and Python Tour 2017.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "\n",
     "x = 5 + 5\n",
-    "print \"The value of the 'x' variable is \" + str(x) + \".\"\n"
+    "print (\"The value of the 'x' variable is \" + str(x) + \".\")\n"
    ]
   },
   {
@@ -161,9 +161,9 @@
     }
    ],
    "source": [
-    "print some_integer\n",
-    "print some_float\n",
-    "print some_string"
+    "print (some_integer)\n",
+    "print (some_float)\n",
+    "print (some_string)"
    ]
   },
   {
@@ -192,8 +192,8 @@
     }
    ],
    "source": [
-    "print \"My integer is \" + str(some_integer) + \".\"\n",
-    "print \"My float converted into integer is \" + str( int(some_float) ) + \".\""
+    "print (\"My integer is \" + str(some_integer) + \".\")\n",
+    "print (\"My float converted into integer is \" + str( int(some_float) ) + \".\")"
    ]
   },
   {
@@ -214,18 +214,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sum 12.12\n",
+      "sum 12.120000000000001\n",
       "multiplication 35.6\n",
-      "quotient 0.702247191011\n",
+      "quotient 0.7022471910112359\n",
       "power 100000\n"
      ]
     }
    ],
    "source": [
-    "print \"sum \" + str( some_integer + some_float )\n",
-    "print \"multiplication \" + str ( some_integer * some_float )\n",
-    "print \"quotient \" + str( some_integer / some_float )\n",
-    "print \"power \" + str( 10**some_integer )"
+    "print (\"sum \" + str( some_integer + some_float ))\n",
+    "print (\"multiplication \" + str ( some_integer * some_float ))\n",
+    "print (\"quotient \" + str( some_integer / some_float ))\n",
+    "print (\"power \" + str( 10**some_integer ))"
    ]
   },
   {
@@ -246,13 +246,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum variable: 12.12\n"
+      "Sum variable: 12.120000000000001\n"
      ]
     }
    ],
    "source": [
     "my_sum = some_integer + some_float\n",
-    "print \"Sum variable: \" + str( my_sum )"
+    "print (\"Sum variable: \" + str( my_sum ))"
    ]
   },
   {
@@ -278,8 +278,8 @@
      "output_type": "stream",
      "text": [
       "This is a list:  [0, 0, 1, 2, 3, 3, 4.5, 7.6]\n",
-      "This is a dictionary:  {'student3': '(470)-000-0000', 'student2': '(917)-000-0000', 'student1': '(929)-000-0000'}\n",
-      "This is a set:  set([1, 2, 4, 5])\n"
+      "This is a dictionary:  {'student1': '(929)-000-0000', 'student3': '(470)-000-0000', 'student2': '(917)-000-0000'}\n",
+      "This is a set:  {1, 2, 4, 5}\n"
      ]
     }
    ],
@@ -288,9 +288,9 @@
     "some_dictionary = {'student1': '(929)-000-0000', 'student2': '(917)-000-0000', 'student3': '(470)-000-0000'}\n",
     "some_set = set( [1,2,4,4,5,5] )\n",
     "\n",
-    "print \"This is a list:  \" + str(some_list)\n",
-    "print \"This is a dictionary:  \" + str( some_dictionary )\n",
-    "print \"This is a set:  \" + str( some_set )"
+    "print (\"This is a list:  \" + str(some_list))\n",
+    "print (\"This is a dictionary:  \" + str( some_dictionary ))\n",
+    "print (\"This is a set:  \" + str( some_set ))"
    ]
   },
   {
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "print some_list[0]"
+    "print (some_list[0])"
    ]
   },
   {
@@ -345,7 +345,7 @@
    ],
    "source": [
     "some_list.append(5)\n",
-    "print some_list"
+    "print (some_list)"
    ]
   },
   {
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "print some_dictionary['student1']"
+    "print (some_dictionary['student1'])"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "source": [
     "\n",
     "circle_area = area_of_a_circle(5)\n",
-    "print \"Area of a circle with radius 5 is: \" + str( circle_area)\n"
+    "print (\"Area of a circle with radius 5 is: \" + str( circle_area))\n"
    ]
   },
   {
@@ -466,7 +466,7 @@
    ],
    "source": [
     "for number in [1, 2, 3, 4, 5]:\n",
-    "    print number * number"
+    "    print (number * number)"
    ]
   },
   {
@@ -499,7 +499,7 @@
    ],
    "source": [
     "for number in [1, 2, 3, 4, 5]:\n",
-    "    print \"Area of circle with radius \" + str(number) + \" is: \" + str( area_of_a_circle(number) )"
+    "    print (\"Area of circle with radius \" + str(number) + \" is: \" + str( area_of_a_circle(number) ))"
    ]
   },
   {
@@ -547,7 +547,7 @@
     }
    ],
    "source": [
-    "print is_best_prof(\"Foster\")"
+    "print (is_best_prof(\"Foster\"))"
    ]
   },
   {
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "print is_best_prof(\"John\")"
+    "print (is_best_prof(\"John\"))"
    ]
   },
   {
@@ -627,7 +627,7 @@
     }
    ],
    "source": [
-    "print is_my_age(10)"
+    "print (is_my_age(10))"
    ]
   },
   {
@@ -646,7 +646,7 @@
     }
    ],
    "source": [
-    "print is_my_age(23)"
+    "print (is_my_age(23))"
    ]
   },
   {
@@ -665,7 +665,7 @@
     }
    ],
    "source": [
-    "print is_my_age(40)"
+    "print (is_my_age(40))"
    ]
   },
   {
@@ -757,7 +757,7 @@
       "Maximum element of our previous list: 7.6\n",
       "Number of elements in our previous list: 9\n",
       "Sum of elements in our previous list: 26.1\n",
-      "Range of 5 numbers (remember we start with 0): [0, 1, 2, 3, 4]\n"
+      "Range of 5 numbers (remember we start with 0): range(0, 5)\n"
      ]
     }
    ],
@@ -765,14 +765,14 @@
     "\n",
     "# In this part of the code I am using numpy (np) functions\n",
     "\n",
-    "print \"Square root: \" + str ( np.sqrt(25) )\n",
-    "print \"Maximum element of our previous list: \" + str( np.max(some_list) )\n",
+    "print (\"Square root: \" + str ( np.sqrt(25) ))\n",
+    "print (\"Maximum element of our previous list: \" + str( np.max(some_list) ))\n",
     "\n",
     "# In this part of the code I am using python functions\n",
     "\n",
-    "print \"Number of elements in our previous list: \" + str( len(some_list) )\n",
-    "print \"Sum of elements in our previous list: \" + str( sum(some_list) )\n",
-    "print \"Range of 5 numbers (remember we start with 0): \" + str( range(5) )\n",
+    "print (\"Number of elements in our previous list: \" + str( len(some_list) ))\n",
+    "print (\"Sum of elements in our previous list: \" + str( sum(some_list) ))\n",
+    "print (\"Range of 5 numbers (remember we start with 0): \" + str( range(5) ))\n",
     "\n"
    ]
   },
@@ -875,11 +875,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-26-f88ced56917d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-f88ced56917d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    np.sqrt(\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "np.sqrt("
    ]
@@ -1076,21 +1085,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
