Pre-Class preparation 2017

--- a/Class0/Programming_Structures_and_Python_Basics_2017.ipynb
+++ b/Class0/Programming_Structures_and_Python_Basics_2017.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows examples of Python built-in functions, packages and programming structures useful for Data Science and Business Analytics. This notebook is a modified version of [Rob Moakler](https://github.com/rmoakler/learning-data-science/blob/master/Spring%202016/Hands-on/Module%201%20-%20Python%20and%20IPython%20Notebooks/IPython%20Notebook%20Tour.ipynb)"
+    "This notebook shows examples of Python code, including built-in functions, packages and programming structures useful for Data Science and Business Analytics. This notebook is a modified version of one created by [Rob Moakler](https://github.com/rmoakler/learning-data-science/blob/master/Spring%202016/Hands-on/Module%201%20-%20Python%20and%20IPython%20Notebooks/IPython%20Notebook%20Tour.ipynb).  This should be review for you all!  At the bottom there are some pointers to a few resources."
    ]
   },
   {
@@ -35,13 +35,13 @@
    "source": [
     "### 1. Variables, operations and data types\n",
     "Variables are used to store data. \n",
-    "This data can be of a variety of types: \n",
+    "The data can be of a variety of types: \n",
     "\n",
     "- Integer numbers\n",
     "- Floating (decimal numbers)\n",
     "- Strings\n",
     "\n",
-    "Let's create three variables of each type with 3 different names:"
+    "Let's create three variables, one of each type, with 3 different names:"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can print out these variables. Remember we should run the previous cell first!"
+    "We can print out these variables. Remember we need to run the previous cell first!"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -182,14 +182,14 @@
    "source": [
     "There are also other **data structures**:\n",
     "\n",
-    "- Lists (or arrays)\n",
+    "- Lists (sometimes refered to as \"arrays\", but look up the difference)\n",
     "- Dictionaries\n",
     "- Sets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -199,7 +199,7 @@
      "output_type": "stream",
      "text": [
       "This is a list:  [0, 0, 1, 2, 3, 3, 4.5, 7.6]\n",
-      "This is a dictionary:  {'student1': '(929)-000-0000', 'student3': '(470)-000-0000', 'student2': '(917)-000-0000'}\n",
+      "This is a dictionary:  {'student2': '(917)-000-0000', 'student1': '(929)-000-0000', 'student3': '(470)-000-0000'}\n",
       "This is a set:  {1, 2, 4, 5}\n"
      ]
     }
@@ -220,7 +220,7 @@
    "source": [
     "How can we use  **individual** elements? \n",
     "\n",
-    "In Python (and almost every other language), we should count elements of a _list_ starting from zero! To get the first item we should look in the 0th space:\n"
+    "In Python (and generally by computer science convention), we count elements of a _list_ starting from zero! To get the first item we should look in the 0th space:\n"
    ]
   },
   {
@@ -246,12 +246,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adding things to the list is as easy as appending them,"
+    "Adding things to the end of the list is \"appending\" them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -260,12 +260,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 2, 3, 3, 4.5, 7.6, 5]\n"
+      "[0, 0, 1, 2, 3, 3, 4.5, 7.6, 500]\n"
      ]
     }
    ],
    "source": [
-    "some_list.append(5)\n",
+    "some_list.append(500)\n",
     "print (some_list)"
    ]
   },
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How can we call an element (**VALUE**) of a _dictionary_ ?  Use the **\"KEY\"** !! "
+    "How can we retrieve an element (**VALUE**) of a _dictionary_ ?  Use its **\"KEY\"** !! "
    ]
   },
   {
@@ -306,14 +306,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Functions allow us to do predefined operations, or in other words, to do encapsulation of procedures. If we knew we had to do some operation many times, and wanted to save a bit of time, instead of writing the same code many times, we could define functions. \n",
+    "Functions allow us to execute predefined operations and to define our own operations that will be available later.  They encapsulate procedures. If we know we are likely to execute some operation many times, we may want to save time, to avoid repeated code, and often to clarify what we are doing.  To do this, we would define a function.  \n",
+    "\n",
+    "(*If you haven't thought this through before, consider the drawback of repeated code: what if later you realize that you need to fix something in that code block.  You'd have to go through and fix it everywhere.*) \n",
     "\n",
     "For example, consider having to calculate the area of a circle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will be doing a lot of repetative things in Python. This doesn't mean we need to do a ton of copy and pasting, though. We can use **loops** to make this easy. For example, if we wanted to square each number from 1 to 5,"
+    "For data analysis we do a lot of repetitive things. This doesn't mean we need to do a ton of copy and pasting, though. We can use **loops** to make this easy. As a very simple example, what if we wanted to square each number from 1 to 5?"
    ]
   },
   {
@@ -396,12 +398,12 @@
    "source": [
     "Let's use the function we did before. Remember this is a function that can only be used in **this notebook** \n",
     "\n",
-    "( unless we write in a **\"script\"** file, but we'll see that later!! ):"
+    "( unless we write a **\"script\"** file, but we'll see that later... ):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -434,12 +436,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes we want to check something before deciding what to do next. For example,"
+    "Sometimes we need to check something before deciding what to do next. For example,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -447,14 +449,14 @@
    "source": [
     "def is_best_prof(name):\n",
     "    if name == \"Foster\":\n",
-    "        return \"Yes!\"\n",
+    "        return True\n",
     "    else:\n",
-    "        return \"No!\""
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -463,7 +465,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes!\n"
+      "True\n"
      ]
     }
    ],
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No!\n"
+      "False\n"
      ]
     }
    ],
@@ -491,10 +493,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You're going to have a great semester!\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_prof = \"Foster\"\n",
+    "if is_best_prof(my_prof):\n",
+    "    print(\"You're going to have a great semester!\")\n",
+    "else:\n",
+    "    print(\"Well, make the best of it!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, we made **comparison** of names with the \"equal\" operation  (==).\n",
+    "You see in that last one how we have a conditional in the cell, and then call a function that has a conditional inside it?  \n",
+    "\n",
+    "Let's put a whole bunch of these things together:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Well, make the best of it!\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_profs = [\"John\", \"Paul\", \"George\", \"Ringo\"]\n",
+    "one_best = False\n",
+    "for prof in my_profs:\n",
+    "    if is_best_prof(prof):\n",
+    "        one_best = True\n",
+    "if one_best:\n",
+    "    print(\"You're going to have a great semester!\")\n",
+    "else:\n",
+    "    print(\"Well, make the best of it!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see here, we made **comparison** of names with the \"equal\" operation  (==).  Remember ... it's == not just = !\n",
     "\n",
     "Other comparisons:\n",
     "\n",
@@ -507,7 +568,7 @@
     "- negated object identity \"is not\"\n",
     "\n",
     "What if we want to compare more than one element? \n",
-    "We should include **bitwise operations** such as:\n",
+    "We should include logical operations such as:\n",
     "\n",
     "- \"and\", also known as \"&\" \n",
     "- \"or\", also known as \"|\"\n",
@@ -601,8 +662,8 @@
    "metadata": {},
    "source": [
     "- [Codecademy's Python Course](https://www.codecademy.com/learn/python). Working though this class will give you a _great_ foundation for Python.\n",
-    "- [Diving into Python](http://www.diveintopython.net/toc/index.html) online book. Working you way from chapter 1 through chapter 5 would put you in a great place!\n",
-    "- [Python for Data Analysis](https://www.amazon.com/Python-Data-Analysis-Wrangling-IPython-ebook/dp/B009NLMB8Q/ref=mt_kindle?_encoding=UTF8&me=) was the book that Prof. Foster suggested me when I was taking this course. You can take a look to the chapters: Preliminaries, Introductory Examples (e.g. \"Counting Time Zones with pandas”), IPython (page 46 to 62) and specially, Pandas.\n",
+    "- [Diving into Python](http://www.diveintopython.net/toc/index.html) online book. Working you way from chapter 1 through chapter 5 would put you in a very nice place!\n",
+    "- [Python for Data Analysis](https://www.amazon.com/Python-Data-Analysis-Wrangling-IPython-ebook/dp/B009NLMB8Q/ref=mt_kindle?_encoding=UTF8&me=) was the book that Prof. Foster suggested to me (Maria) when I was taking this course. You can take a look at the chapters: Preliminaries, Introductory Examples (e.g. \"Counting Time Zones with pandas”), IPython (page 46 to 62) and specially, Pandas--one of the main Python packages for data analysis.  We will work with Pandas in class.\n",
     "\n",
     "\n",
     "If you are ever stuck just remember: it is normal. This is actually how professional programmers work every day. Google is your best friend, and websites such as Stackoverflow.com have an answer to almost any programming question!\n"
@@ -620,21 +681,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
