--- a/Class8_Unsupervised_MLreview/Unsupervised+methods+python3.ipynb
+++ b/Class8_Unsupervised_MLreview/Unsupervised+methods+python3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -235,102 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DATA REPRESENTATION:    (0, 20903)\t5\n",
-      "  (1, 35627)\t10\n",
-      "  (2, 28455)\t10\n",
-      "  (3, 7207)\t6\n",
-      "  (4, 7396)\t8\n",
-      "  (4, 10813)\t7\n",
-      "  (4, 12501)\t8\n",
-      "  (4, 12658)\t9\n",
-      "  (4, 12889)\t10\n",
-      "  (4, 14769)\t7\n",
-      "  (4, 18924)\t10\n",
-      "  (4, 20903)\t7\n",
-      "  (4, 22828)\t7\n",
-      "  (4, 29264)\t10\n",
-      "  (4, 33417)\t9\n",
-      "  (4, 37083)\t6\n",
-      "  (5, 7396)\t7\n",
-      "  (5, 12501)\t7\n",
-      "  (5, 14769)\t5\n",
-      "  (6, 12069)\t5\n",
-      "  (6, 28529)\t4\n",
-      "  (7, 28529)\t3\n",
-      "  (8, 12362)\t7\n",
-      "  (9, 28529)\t4\n",
-      "  (10, 16786)\t4\n",
-      "  :\t:\n",
-      "  (22735, 14540)\t7\n",
-      "  (22735, 14731)\t1\n",
-      "  (22735, 14945)\t9\n",
-      "  (22735, 15141)\t7\n",
-      "  (22735, 18375)\t10\n",
-      "  (22735, 21534)\t10\n",
-      "  (22735, 23331)\t10\n",
-      "  (22735, 24268)\t1\n",
-      "  (22735, 24623)\t8\n",
-      "  (22735, 25944)\t6\n",
-      "  (22735, 27905)\t5\n",
-      "  (22735, 28353)\t10\n",
-      "  (22735, 29048)\t8\n",
-      "  (22735, 29861)\t7\n",
-      "  (22735, 33795)\t10\n",
-      "  (22735, 36416)\t7\n",
-      "  (22735, 38026)\t7\n",
-      "  (22735, 39459)\t10\n",
-      "  (22736, 282)\t9\n",
-      "  (22737, 3779)\t8\n",
-      "  (22738, 26559)\t5\n",
-      "  (22739, 17145)\t8\n",
-      "  (22740, 3779)\t4\n",
-      "  (22741, 24653)\t6\n",
-      "  (22742, 17962)\t9\n",
-      "\n",
-      " (Movie,User) Rating \n",
-      "\n",
-      "  (0, 20903)\t5\n",
-      "  (1, 35627)\t10\n",
-      "  (2, 28455)\t10\n",
-      "  (3, 7207)\t6\n",
-      "  (4, 7396)\t8\n",
-      "  (4, 10813)\t7\n",
-      "  (4, 12501)\t8\n",
-      "  (4, 12658)\t9\n",
-      "  (4, 12889)\t10\n",
-      "  (4, 14769)\t7\n",
-      "  (4, 18924)\t10\n",
-      "  (4, 20903)\t7\n",
-      "  (4, 22828)\t7\n",
-      "  (4, 29264)\t10\n",
-      "  (4, 33417)\t9\n",
-      "  (4, 37083)\t6\n",
-      "\n",
-      " Movies information \n",
-      "\n",
-      "   movie_id                                    movie_title  \\\n",
-      "0         0  Edison Kinetoscopic Record of a Sneeze (1894)   \n",
-      "1         1           La sortie des usines LumiÃ¨re (1895)   \n",
-      "2         2                  The Arrival of a Train (1896)   \n",
-      "3         3                     Le manoir du diable (1896)   \n",
-      "4         4                  Le voyage dans la lune (1902)   \n",
-      "\n",
-      "                     genre  \n",
-      "0        Documentary|Short  \n",
-      "1        Documentary|Short  \n",
-      "2        Documentary|Short  \n",
-      "3             Short|Horror  \n",
-      "4  Short|Adventure|Fantasy  \n"
+     "ename": "TypeError",
+     "evalue": "load() got an unexpected keyword argument 'encoding'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-b55482290f3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/movies_ratings.pickle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: load() got an unexpected keyword argument 'encoding'"
      ]
     }
    ],
@@ -344,7 +263,7 @@
     "    movies = pickle.load(f,encoding='latin1')\n",
     "    f.close()\n",
     "    \n",
-    "print (\"DATA REPRESENTATION: \", data)\n",
+    "print (\"DATA REPRESENTATION: \")\n",
     "print (\"\\n (Movie,User) Rating \\n\")\n",
     "print (data[0:5])\n",
     "print (\"\\n Movies information \\n\")\n",
@@ -749,21 +668,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
